:sparkles:!: Implementation of dependency injection framework